# conway

./: .clang-format  .gitignore  .gitmodules  .tokeignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
inc/: conway.cl  game.hpp  grid.hpp  kernel.hpp  renderer.hpp  shader.hpp  util.hpp
inc/shaders/: compute.cl  default.vert
src/: CMakeLists.txt  game.cpp  grid.cpp  kernel.cpp  main.cpp  renderer.cpp  shader.cpp  util.cpp
